--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-*{
+/* --- Your Original CSS with tiny fixes --- */
+* {
     margin: 0;
+    padding: 0; /* Added padding reset */
     font-family: Arial, Helvetica, sans-serif;
-    border: border-box;
+    box-sizing: border-box; /* Fixed from 'border: border-box' */
 }
-.navbar{
+
+.navbar {
     height: 60px;
     background-color: #0f1111;
     color: white;
@@ -12,249 +15,235 @@
     justify-content: space-evenly;
 }
 
-.nav-logo{
+.nav-logo {
     height: 50px;
     width: 100px;
 }
-.logo{
+
+.logo {
     background-image: url("amazon.jpg");
     background-size: cover;
     height: 50px;
     width: 100%;
 }
 
-.border{
+.border {
     border: 1.5px solid transparent;
 }
-.border:hover{
-    border: 1px solid white;
-    /* padding: 3px; */
 
+.border:hover {
+    border: 1px solid white;
 }
-.first{
+
+.first {
     color: #cccccc;
     font-size: 0.85rem;
-    margin-left:20px;
-}
-.second{
-    font-size: 1rem;
-    margin-left: 1%;
-}
-.nav-icon{
-    display: flex;
-    align-items: center;
-}
-
-.nav-search{
-    display: flex;
-    justify-content: space-evenly;
-    width: 600px;
-    height: 30px;
-}
-.nav-search:hover{
-    border: 2px solid orange;
-
-}
-.search-selecter{
-    border: none;
-    text-align: center;
-    width: 45px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-    background-color: #e6e6e6;
-}
-.search-input{
-    width: 100%;
-    height: 30px;
-    font-size: 1em;
-    padding: 0px 0px 0px 0px ;
-    outline: none;
-}
-.search-icon{
-    width: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    color: black;
-    border: none;    
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    background-color: orange;
-}
-.language{
-    display: flex;
-}
-.contry{
-    background-color: #0f1111;
-    color: white;
-    width: 40px;
-    border: none;
-}
-.para-first{
-    font-size: 0.85rem;
-    color: #cccccc;
-    margin-left: 5%;
-}
-.account-selector{
-    background-color: #0f1111;
-    color: white;
-    border: none;
-    font-size: 16px;
-}
-.cart{
-    display: flex;
-}
-.nav-cart{
-    padding-top: 15px;
-}
-.pannel{
-    height: 40px;
-    display: flex;
-    background-color: rgba(0, 0, 0, 0.85);
-    color: white;
-    align-items: center;
-    justify-content: space-evenly;
-
-}
-.anchor-tag {
-    display: flex;
-    width: 70%;
-
-}
-.anchor-tag p {
-    margin-left: 20px;
-    /* font-size: 14px; */
-    padding: 4px;
-}
-.hero-section{
-    background-image: url("hero-section.jpg");
-    background-size: cover;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;    
-}
-.hero-div{
-    text-decoration: none;
-    background-color: white;
-    color: black;
-    height: 35px;
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.hero-div a {
-    text-decoration: none;
-    font-size: 14px;
-}
-
-.shoping-box{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: rgb(241, 238, 238);
-    margin-top: 10px;
-}
-.box{
-    height: 400px;
-    width: 23%;
-    padding: 20px 0px 15px;
-    margin-top: 15px; ;
-    background-color: white;
-
-}
-.box-image{
-    height: 300px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-.box1-content{
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-footer{
-    margin-top: 15px;
-}
-.foot-one{
-    background-color: #37475A;
-    text-align: center;
-    color: white;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-}
-.foot-two{
-    height: 300px;
-    color:#dddddd ;
-    background-color: rgba(0, 0, 0, 0.85);
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 20px;
-}
-.foot-two ul a {
-    display: block;
-    font-size: 12px;
-    margin-top: 15px;
-}
-.foot-three{
-    height: 70px;
-    background-color:black;
-    border-top: 0.2px solid white;
-        display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.logo-footer{
-     background-image: url("amazon.jpg");
-    background-size: cover;
-    mix-blend-mode: screen;
-    height: 50px;
-    width: 100px;
-
-}
-.foot-four{
-    height: 100px;
-    background-color: #0f1111;
-    color: white;
-    font-size: 12px;
-    text-align: center;
-   
-  
-}
-.pages{
-     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-}
-
-.copy-right{
-    margin-top: 5px;
-     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.element{
-    height: 35px;
-    /* width: 440px; */
-    color: white;
-    display: flex;
-    justify-content: space-evenly;
-    /* justify-content: center; */
-    gap: 1px;
-}
-.divborder{
-    border: 1px solid white;
-    padding: 6px 10px ;
-    border-radius: 3px;
-    /* display: flex;
-    align-items: center; */
     margin-left: 10px;
 }
 
+.second {
+    font-size: 1rem;
+    margin-left: 5px;
+}
+
+.nav-icon {
+    display: flex;
+    align-items: center;
+}
+
+.nav-search {
+    display: flex;
+    width: 600px;
+    height: 40px; /* Slightly taller for better UX */
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.nav-search:hover {
+    border: 2px solid orange;
+}
+
+.search-selecter {
+    border: none;
+    text-align: center;
+    width: 50px;
+    background-color: #e6e6e6;
+}
+
+.search-input {
+    flex-grow: 1;
+    border: none;
+    font-size: 1rem;
+    padding-left: 10px;
+    outline: none;
+}
+
+.search-icon {
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: orange;
+    color: black;
+    cursor: pointer;
+}
+
+.language, .cart { display: flex; }
+
+.contry, .account-selector {
+    background-color: #0f1111;
+    color: white;
+    border: none;
+    outline: none;
+}
+
+.pannel {
+    height: 40px;
+    display: flex;
+    background-color: #232f3e;
+    color: white;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.anchor-tag {
+    display: flex;
+    margin-left: 20px;
+}
+
+.anchor-tag p {
+    margin-right: 15px;
+    font-size: 14px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.hero-section {
+    background-image: url("hero-section.jpg");
+    background-size: cover;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.hero-div {
+    background-color: #f5f6f6;
+    width: 95%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+
+.shoping-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #e3e6e6;
+    padding: 20px 0;
+}
+
+.box {
+    height: 400px;
+    width: 23%;
+    margin: 10px;
+    background-color: white;
+    padding: 20px;
+}
+
+.box-image {
+    height: 250px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 1rem 0;
+}
+
+/* --- FOOTER SECTION --- */
+.foot-one {
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.foot-two {
+    background-color: #232f3e;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 40px 0;
+}
+
+.foot-two ul a {
+    display: block;
+    font-size: 14px;
+    margin-top: 10px;
+    color: #DDD;
+    text-decoration: none;
+}
+
+.foot-three {
+    background-color: #232f3e;
+    border-top: 1px solid #3a4553;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.logo-footer {
+    background-image: url("amazon.jpg");
+    background-size: cover;
+    height: 40px;
+    width: 80px;
+}
+
+.foot-four {
+    background-color: #131a22;
+    color: white;
+    padding: 20px;
+    font-size: 12px;
+}
+
+/* --- RESPONSIVENESS (The Magic) --- */
+
+/* Tablets (iPad, small laptops) */
+@media (max-width: 1024px) {
+    .nav-search { width: 400px; }
+    .box { width: 45%; } /* 2 boxes per row */
+    .nav-address, .language { display: none; }
+}
+
+/* Mobile Phones */
+@media (max-width: 700px) {
+    .navbar {
+        height: auto;
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    
+    .nav-search {
+        order: 3; /* Move search below logo/cart */
+        width: 100%;
+        margin-top: 10px;
+    }
+    
+    .nav-logo { width: 80px; }
+    
+    .anchor-tag { display: none; } /* Hide extra links on mobile */
+    
+    .box { width: 90%; } /* 1 box per row */
+    
+    .foot-two {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .foot-two ul { margin-bottom: 20px; }
+}
